TEST/EXCEPT-tests/exception_test_006.errout.GOLD
/workspaces/Pnut-ts-dev/TEST/EXCEPT-TEST/exception_test_006.spin2:5:error:Hub address exceeds limit
